# physics-simulator

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
include/glad/: glad.h
src/: glad.c  main.cpp
src/graphics/renderer/basic/: basic_renderer.cpp  basic_renderer.h
src/graphics/renderer/inline_color/: inline_color_renderer.cpp  inline_color_renderer.h
src/graphics/shader/: shader.cpp  shader.h
src/graphics/shader/program/: shader_program.cpp  shader_program.h
src/graphics/shader/shader/: shader.cpp  shader.h
src/graphics/shader/src/inline_color/: vertex_shader.vert
src/input_manager/: input.cpp  input.h
src/physics/2d_physics/: 2d_physics.cpp  2d_physics.h
src/physics/core_math/: core_math.cpp  core_math.h
src/scenes/2d/: 2d_scenes.cpp  2d_scenes.h
src/scenes/2d/objects/: object2d.cpp  object2d.h
src/scenes/scene_manager/: scene_manager.cpp  scene_manager.h
src/window_manager/: window.cpp  window.h
